c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/add_variables.c
int main(void) {
    int first_variable = 1;
    int second_variable = 2;
    return first_variable + second_variable;
}