c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/prefix_incr_non_lvalue.c
int main(void) {
    int a = 1;
    ++(a+1);
    return 0;
}